# machinepmmeter

./: Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs
src/app/: about_dialog.rs  aboutdialog.rs  cli.rs  config.rs  consts.rs  dock_window.rs  dockwindow.rs  events.rs  keyboard.rs  menu.rs  tray_menu.rs  traymenu.rs
src/core/: constopt.rs  constuppercase.rs  display.rs  dock_window.rs  eight_bitcolor.rs  f64sbuff.rs  gtk_codegen.rs  keyboard_listener.rs  maybe.rs  traymenu.rs
src/core/keyboard/: err.rs  key.rs  mod.rs
src/core/keyboard/sys/: x11.rs
src/core/keyboard/x11/: context.rs  datacontaier.rs  display.rs  mod.rs
src/core/keyboard/x11/record/: interdata.rs  range.rs
src/metrics/: demo.rs  lm_sensors.rs  sysinfo.rs  udisks2.rs
src/widgets/: dock_head.rs  dockhead.rs  hotkeys.rs  indicator.rs  mod.rs  notebook.rs  text_meter.rs  textmeter.rs
src/widgets/primitives/: color_block.rs  colorblock.rs  graph.rs  hotkey.rs  hotkeyitem.rs  icon_menuitem.rs  iconmenuitem.rs  label.rs
src/widgets/primitives/graph/: background.rs  data.rs  stream.rs  vi.rs
style/: def.css
