[package]
name = "ryzenpmmeter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
appindicator3 = { version = "0.3.0", feature = ["original"] }
clap = { version = "4", features = ["derive"] }
directories = "6.0.0"
enclose = "1.2.1"
env_logger = "0.11.8"
gtk = "0.18.2"
log = "0.4.27"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
