[package]
name = "machinepmmeter"
version = "0.1.0-alpa"
edition = "2024"
description = "Real-time system performance monitor for apps/games, lm_sensors/ryzenadj."

[dependencies]
anyhow = "1.0.98"
appindicator3 = { version = "0.3.0", feature = ["original"] }
async-channel = "2.3.1"
clap = { version = "4", features = ["derive"] }
directories = "6.0.0"
enclose = "1.2.1"
env_logger = "0.11.8"
gtk = "0.18.2"
lm-sensors = "0.3.2"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
libc = { version = "0.2.172", optional = true }
x11 = { version = "2.21.0", features = ["xlib", "xrecord", "xinput"], optional = true }

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = [ "x11_keyboard" ]
x11_keyboard = [ "x11", "libc" ]